fix circle progress bar postioning (non responsive for now), add options group wrapping

--- a/hair-care-routine-spa/src/assets/question.css
+++ b/hair-care-routine-spa/src/assets/question.css
@@ -10,8 +10,8 @@
 
 .aside {
     position: absolute;
-    right:150px;
-    top: 37%;
+    right: 150px;
+    top: 30%;
     width: 91px;
     height: 91px;
 }
@@ -25,6 +25,8 @@
     flex-direction: column;
     height: 100vh;
     gap: 20px;
+    max-width: 150vh;
+    /* margin: 0 auto; */
 }
 
 
@@ -59,6 +61,6 @@
 }
 
 .CircularProgressbar-text {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
 }
